force-app/main/default/objects/Store_Appointment_Booking__c/Store_Appointment_Booking__c.object-meta.xml
<CustomObject>
    <label>Store Appointment Booking</label>
    <nameField>
        <displayFormat>APT-{000000}</displayFormat>
        <label>Store Appointment Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Appointment Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>