force-app/main/default/objects/Store_Appointment_Booking__c/fields/Additional_Note__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note__c</fullName>
    <label>Anything we should know?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>