force-app/main/default/objects/Store_Appointment_Booking__c/fields/Appointment_End__c.field-meta.xml
<CustomField>
    <fullName>Appointment_End__c</fullName>
    <description>Useful for availability/double-booking</description>
    <label>Appointment End</label>
    <type>DateTime</type>
</CustomField>