force-app/main/default/objects/Store_Appointment_Booking__c/fields/Appointment_Start__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Start__c</fullName>
    <description>Selected appointment slot</description>
    <label>Appointment Start</label>
    <type>DateTime</type>
</CustomField>