force-app/main/default/objects/Store_Appointment_Booking__c/fields/Confirmation_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Error__c</fullName>
    <description>Exception type + message captured when Confirmation_Email_Status__c = Failed. Debug logs expire; this doesn&apos;t.</description>
    <label>Confirmation Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>