force-app/main/default/objects/Store_Appointment_Booking__c/fields/Confirmation_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Status__c</fullName>
    <description>Whether the guest confirmation email + calendar invite was successfully queued for this booking. Set every time, success or failure, so a silent send failure is never invisible.</description>
    <label>Confirmation Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped - No Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>