force-app/main/default/objects/Store_Appointment_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matched or created Contact for this appointment, synced alongside Customer__c using the same Contact/Account matching convention as CARAOrderRestService.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Store Appointment Bookings</relationshipLabel>
    <relationshipName>Store_Appointment_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>