force-app/main/default/objects/Store_Appointment_Booking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Appointment Bookings</relationshipLabel>
    <relationshipName>Store_Appointment_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>