force-app/main/default/objects/Store_Appointment_Booking__c/fields/External_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Request_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Request ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>