force-app/main/default/objects/Store_Appointment_Booking__c/fields/interested_in__c.field-meta.xml
<CustomField>
    <fullName>interested_in__c</fullName>
    <label>What are you interested in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General appointment</fullName>
            </value>
            <value>
                <fullName>Bridal &amp; engagement</fullName>
            </value>
            <value>
                <fullName>High jewellery</fullName>
            </value>
            <value>
                <fullName>Repairs &amp; servicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>