force-app/main/default/objects/Store_Appointment_Booking__c/fields/Party_size__c.field-meta.xml
<CustomField>
    <fullName>Party_size__c</fullName>
    <label>Party size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Just Me</fullName>
            </value>
            <value>
                <fullName>2 guests</fullName>
            </value>
            <value>
                <fullName>3 guests</fullName>
            </value>
            <value>
                <fullName>4+ guests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>