force-app/main/default/objects/Store_Appointment_Booking__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Store Appointment Bookings</relationshipLabel>
    <relationshipName>Store_Appointment_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>